added in doeburr screen

--- a/twitch.html
+++ b/twitch.html
@@ -51,5 +51,9 @@ layout: default
         <img class="portfolio-piece" src="{{site.baseurl}}/images/twitch/itchy.png" alt="Itchy emotes">
       </div>
 
+      <div class="card unit s-1 m-1-2 island">
+        <img class="portfolio-piece" src="{{site.baseurl}}/images/twitch/doe-screen.png" alt="Doeburr chatting screen">
+      </div>
+
     </div>
   </section>
