--- a/twitch.html
+++ b/twitch.html
@@ -3,7 +3,7 @@ layout: default
 ---
 
 <section class="workbody">
-  <h3 class="island">Twitch - xXGingerKittenXx</h3>
+  <h3 class="island">Twitch Stream Assets</h3>
   <div class="pieces grid">
 
     <div class="unit s-1 m-1 l-1-2 island">
@@ -25,14 +25,6 @@ layout: default
     </ul>
     </div>
 
-      <!-- <div class="unit s-1 l-1-2 island">
-        <p class="milli">Glow for Kids is an event run by the Boys and Gurls Club in Ottawa. It is Ottawa's only glow in the dark dodgeball tournament that engages many different people from alumni to teams to young professionals. They reached out to me to help design a logo to use for the event.</p>
-      </div> -->
-
-      <!-- <div class="card unit s-1 l-1-2 island">
-        <img class="portfolio-piece" src="{{site.baseurl}}/images/twitch/gk-sizes.png" alt="Ginger kitten emotes">
-      </div> -->
-
       <div class="card unit s-1 m-1-2 island">
         <img class="portfolio-piece" src="{{site.baseurl}}/images/twitch/gk-emotes.jpg" alt="Ginger kitten emotes">
       </div>
@@ -45,15 +37,26 @@ layout: default
         <img class="portfolio-piece" style="width: 800px;" src="{{site.baseurl}}/images/twitch/gk-phone-gif.gif" alt="brb screen">
       </div>
 
+      <div class="card unit s-1 m-1-2 island">
+        <img class="portfolio-piece" style="width: 800px;" src="{{site.baseurl}}/images/twitch/discord-server-banner.png" alt="brb screen">
+      </div>
+
         <h3 class="card unit s-1 island">Other Twitch Creations</h3>
+
+        <div class="card unit s-1 m-1-2 island">
+          <img class="portfolio-piece" src="{{site.baseurl}}/images/twitch/jesterality-sub-badges.jpg" alt="jesterality sub badges">
+        </div>
+
+        <div class="card unit s-1 m-1-2 island">
+          <img class="portfolio-piece" src="{{site.baseurl}}/images/twitch/pepega-starting-soon.gif" alt="Itchy emotes">
+        </div>
 
       <div class="card unit s-1 m-1-2 island">
         <img class="portfolio-piece" src="{{site.baseurl}}/images/twitch/itchy.png" alt="Itchy emotes">
       </div>
-
-      <div class="card unit s-1 m-1-2 island">
-        <img class="portfolio-piece" src="{{site.baseurl}}/images/twitch/doe-screen.png" alt="Doeburr chatting screen">
-      </div>
+      <!-- <div class="card unit s-1 m-1-2 island">
+        <img class="portfolio-piece" src="{{site.baseurl}}/images/twitch/pepega-case-study.jpg" alt="Itchy emotes">
+      </div> -->
 
     </div>
   </section>
