--- a/twitch.html
+++ b/twitch.html
@@ -54,9 +54,14 @@ layout: default
       <div class="card unit s-1 m-1-2 island">
         <img class="portfolio-piece" src="{{site.baseurl}}/images/twitch/itchy.png" alt="Itchy emotes">
       </div>
-      <!-- <div class="card unit s-1 m-1-2 island">
-        <img class="portfolio-piece" src="{{site.baseurl}}/images/twitch/pepega-case-study.jpg" alt="Itchy emotes">
-      </div> -->
+
+      <div class="card unit s-1 m-1-2 island">
+        <img class="portfolio-piece" src="{{site.baseurl}}/images/twitch/doe-screen.png" alt="Doeburr chatting screen">
+      </div>
+
+      <div class="card unit s-1 island">
+        <img class="portfolio-piece" src="{{site.baseurl}}/images/twitch/pepega-case-study.jpg" alt="The Actual Pepega Case Study">
+      </div>
 
     </div>
   </section>
