updated case study image

--- a/twitch.html
+++ b/twitch.html
@@ -41,7 +41,7 @@ layout: default
         <img class="portfolio-piece" style="width: 800px;" src="{{site.baseurl}}/images/twitch/discord-server-banner.png" alt="brb screen">
       </div>
 
-        <h3 class="card unit s-1 island">Other Twitch Creations</h3>
+        <h3 class="card unit s-1 island">Other Twitch Creators</h3>
 
         <div class="card unit s-1 m-1-2 island">
           <img class="portfolio-piece" src="{{site.baseurl}}/images/twitch/jesterality-sub-badges.jpg" alt="jesterality sub badges">
