--- a/twitch.html
+++ b/twitch.html
@@ -34,6 +34,14 @@ layout: default
       </div>
 
       <div class="card unit s-1 m-1-2 island">
+        <img class="portfolio-piece" src="{{site.baseurl}}/images/twitch/jesterality-sub-badges.jpg" alt="jesterality sub badges">
+      </div>
+
+      <div class="card unit s-1 m-1-2 island">
+        <img class="portfolio-piece" src="{{site.baseurl}}/images/twitch/pepega-starting-soon.gif" alt="Itchy emotes">
+      </div>
+
+      <div class="card unit s-1 m-1-2 island">
         <img class="portfolio-piece" style="width: 800px;" src="{{site.baseurl}}/images/twitch/gk-phone-gif.gif" alt="brb screen">
       </div>
 
@@ -41,15 +49,15 @@ layout: default
         <img class="portfolio-piece" style="width: 800px;" src="{{site.baseurl}}/images/twitch/discord-server-banner.png" alt="brb screen">
       </div>
 
-        <h3 class="card unit s-1 island">Other Twitch Creators</h3>
+      <div class="card unit s-1 m-1-2 island">
+        <img class="portfolio-piece" style="width: 800px;" src="{{site.baseurl}}/images/twitch/shadow-emotes.png" alt="Shadow emotes">
+      </div>
 
-        <div class="card unit s-1 m-1-2 island">
-          <img class="portfolio-piece" src="{{site.baseurl}}/images/twitch/jesterality-sub-badges.jpg" alt="jesterality sub badges">
-        </div>
+      <div class="card unit s-1 m-1-2 island">
+        <img class="portfolio-piece" style="width: 800px;" src="{{site.baseurl}}/images/twitch/shadow-lurk.gif" alt="shadow dog gif">
+      </div>
 
-        <div class="card unit s-1 m-1-2 island">
-          <img class="portfolio-piece" src="{{site.baseurl}}/images/twitch/pepega-starting-soon.gif" alt="Itchy emotes">
-        </div>
+        <!-- <h3 class="card unit s-1 island">Other Twitch Creators</h3> -->
 
       <div class="card unit s-1 m-1-2 island">
         <img class="portfolio-piece" src="{{site.baseurl}}/images/twitch/itchy.png" alt="Itchy emotes">
