--- a/twitch.html
+++ b/twitch.html
@@ -30,7 +30,7 @@ layout: default
       </div>
 
       <div class="card unit s-1 m-1-2 island">
-        <img class="portfolio-piece" src="{{site.baseurl}}/images/twitch/gk-brb-screens.png" alt="brb screen">
+        <img class="portfolio-piece" src="{{site.baseurl}}/images/twitch/gk-brb-screen.gif" alt="brb screen">
       </div>
 
       <div class="card unit s-1 m-1-2 island">
@@ -54,7 +54,7 @@ layout: default
       </div>
 
       <div class="card unit s-1 m-1-2 island">
-        <img class="portfolio-piece" style="width: 800px;" src="{{site.baseurl}}/images/twitch/shadow-emote-gifs.gif" alt="shadow dog gif">
+        <img class="portfolio-piece" style="width: 800px;" src="{{site.baseurl}}/images/twitch/shadow-emote-gif.gif" alt="shadow dog gif">
       </div>
 
         <!-- <h3 class="card unit s-1 island">Other Twitch Creators</h3> -->
