--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@ layout: default
     <div>
       <h3 class="yotta">Hey There!</h3>
     </div>
-    <p>My name is Jaimie and I'm a graphic designer/marketer. I specialize in <strong>branding</strong>, <strong>illustration</strong>, <strong>marketing</strong> and <strong>motion</strong>.s</p>
+    <p>My name is Jaimie and I'm a graphic designer/marketer. I specialize in <strong>branding</strong>, <strong>illustration</strong>, <strong>marketing</strong> and <strong>motion</strong>.</p>
   </div>
 </div>
 
