loading screen added

--- a/twitch.html
+++ b/twitch.html
@@ -34,7 +34,7 @@ layout: default
       </div>
 
       <div class="card unit s-1 m-1-2 island">
-        <img class="portfolio-piece" src="{{site.baseurl}}/images/twitch/pepega-starting-soon.gif" alt="Itchy emotes">
+        <img class="portfolio-piece" src="{{site.baseurl}}/images/twitch/jester-loading.gif" alt="Jesterality loading screen">
       </div>
 
       <div class="card unit s-1 m-1-2 island">
@@ -52,7 +52,7 @@ layout: default
       <div class="card unit s-1 m-1-2 island">
         <img class="portfolio-piece" style="width: 800px;" src="{{site.baseurl}}/images/twitch/shadow-emote-gif.gif" alt="shadow dog gif">
       </div>
-      
+
       <div class="card unit s-1 m-1-2 island">
         <img class="portfolio-piece" style="width: 800px;" src="{{site.baseurl}}/images/twitch/shadow-emotes.png" alt="Shadow emotes">
       </div>
