added new images

--- a/twitch.html
+++ b/twitch.html
@@ -42,6 +42,14 @@ layout: default
       </div>
 
       <div class="card unit s-1 m-1-2 island">
+        <img class="portfolio-piece" src="{{site.baseurl}}/images/twitch/jesterality-group-emotes.jpg" alt="jesterality emotes">
+      </div>
+
+      <div class="card unit s-1 m-1-2 island">
+        <img class="portfolio-piece" src="{{site.baseurl}}/images/twitch/pepega-youtube.jpg" alt="Astroneer youtube cover">
+      </div>
+
+      <div class="card unit s-1 m-1-2 island">
         <img class="portfolio-piece" style="width: 800px;" src="{{site.baseurl}}/images/twitch/discord-server-banner.png" alt="brb screen">
       </div>
 
