--- a/twitch.html
+++ b/twitch.html
@@ -72,6 +72,10 @@ layout: default
       </div>
 
       <div class="card unit s-1 m-1-2 island">
+        <img class="portfolio-piece" src="{{site.baseurl}}/images/twitch/jesterality-chatting.png" alt="Jesteraliy chatting">
+      </div>
+
+      <div class="card unit s-1 m-1-2 island">
         <img class="portfolio-piece" src="{{site.baseurl}}/images/twitch/unseenvision-starting-soon.jpg" alt="starting soon screen">
       </div>
 
