fixing up twitch page

--- a/twitch.html
+++ b/twitch.html
@@ -25,50 +25,52 @@ layout: default
     </ul>
     </div>
 
+    <h3 class="card unit s-1 island">Emotes</h3>
+
+      <div class="card unit s-1 m-1-2 island">
+        <img class="portfolio-piece" style="width: 800px;" src="{{site.baseurl}}/images/twitch/gk-emotes-vday.png" alt="Ginger v day emotes">
+      </div>
+
+      <div class="card unit s-1 m-1-2 island">
+        <img class="portfolio-piece" style="width: 800px;" src="{{site.baseurl}}/images/twitch/gk-emotes-easter.png" alt="Ginger easter emotes">
+      </div>
+
+      <div class="card unit s-1 m-1-2 island">
+        <img class="portfolio-piece" style="width: 800px;" src="{{site.baseurl}}/images/twitch/shadow-emotes.gif" alt="Shadow emotes">
+      </div>
+
+      <div class="card unit s-1 m-1-2 island">
+        <img class="portfolio-piece" src="{{site.baseurl}}/images/twitch/itchinator-emotes.png" alt="Itchy emotes">
+      </div>
+
+      <div class="card unit s-1 m-1-2 island">
+        <img class="portfolio-piece" style="width: 800px;" src="{{site.baseurl}}/images/twitch/gk-emotes-cat.png" alt="Ginger cat emotes">
+      </div>
+
       <div class="card unit s-1 m-1-2 island">
         <img class="portfolio-piece" src="{{site.baseurl}}/images/twitch/gk-emotes.jpg" alt="Ginger kitten emotes">
       </div>
+
+      <div class="card unit s-1 m-1-2 island">
+        <img class="portfolio-piece" src="{{site.baseurl}}/images/twitch/jesterality-5-emotes.png" alt="jesterality emotes">
+      </div>
+
+      <div class="card unit s-1 m-1-2 island">
+        <img class="portfolio-piece" src="{{site.baseurl}}/images/twitch/jesterality-animated-emotes.gif" alt="jesterality emotes">
+      </div>
+
+      <div class="card unit s-1 m-1-2 island">
+        <img class="portfolio-piece" src="{{site.baseurl}}/images/twitch/pepega-animated-emotes.gif" alt="pepega cain emotes">
+      </div>
+
+      <h3 class="card unit s-1 island">Screens</h3>
 
       <div class="card unit s-1 m-1-2 island">
         <img class="portfolio-piece" src="{{site.baseurl}}/images/twitch/gk-brb-screen.gif" alt="brb screen">
       </div>
 
       <div class="card unit s-1 m-1-2 island">
-        <img class="portfolio-piece" src="{{site.baseurl}}/images/twitch/jester-loading.gif" alt="Jesterality loading screen">
-      </div>
-
-      <div class="card unit s-1 m-1-2 island">
-        <img class="portfolio-piece" src="{{site.baseurl}}/images/twitch/jesterality-sub-badges.jpg" alt="jesterality sub badges">
-      </div>
-
-      <div class="card unit s-1 m-1-2 island">
-        <img class="portfolio-piece" src="{{site.baseurl}}/images/twitch/jesterality-group-emotes.jpg" alt="jesterality emotes">
-      </div>
-
-      <div class="card unit s-1 m-1-2 island">
-        <img class="portfolio-piece" src="{{site.baseurl}}/images/twitch/pepega-youtube.jpg" alt="Astroneer youtube cover">
-      </div>
-
-      <div class="card unit s-1 m-1-2 island">
-        <img class="portfolio-piece" style="width: 800px;" src="{{site.baseurl}}/images/twitch/discord-server-banner.png" alt="brb screen">
-      </div>
-
-      <div class="card unit s-1 m-1-2 island">
-        <img class="portfolio-piece" style="width: 800px;" src="{{site.baseurl}}/images/twitch/gk-phone-gif.gif" alt="brb screen">
-      </div>
-
-      <div class="card unit s-1 m-1-2 island">
-        <img class="portfolio-piece" style="width: 800px;" src="{{site.baseurl}}/images/twitch/shadow-emote-gif.gif" alt="shadow dog gif">
-      </div>
-
-      <div class="card unit s-1 m-1-2 island">
-        <img class="portfolio-piece" style="width: 800px;" src="{{site.baseurl}}/images/twitch/shadow-emotes.png" alt="Shadow emotes">
-      </div>
-
-        <!-- <h3 class="card unit s-1 island">Other Twitch Creators</h3> -->
-
-      <div class="card unit s-1 m-1-2 island">
-        <img class="portfolio-piece" src="{{site.baseurl}}/images/twitch/itchy.png" alt="Itchy emotes">
+        <img class="portfolio-piece" src="{{site.baseurl}}/images/twitch/jesterality-loading.gif" alt="Jesterality loading screen">
       </div>
 
       <div class="card unit s-1 m-1-2 island">
@@ -76,12 +78,45 @@ layout: default
       </div>
 
       <div class="card unit s-1 m-1-2 island">
-        <img class="portfolio-piece" src="{{site.baseurl}}/images/twitch/unseenvision-starting-soon.jpg" alt="starting soon screen">
+        <img class="portfolio-piece" src="{{site.baseurl}}/images/twitch/pepega-chatting.png" alt="pepega chatting screen">
       </div>
 
       <div class="card unit s-1 m-1-2 island">
         <img class="portfolio-piece" src="{{site.baseurl}}/images/twitch/doe-screen.png" alt="Doeburr chatting screen">
       </div>
+
+      <h3 class="card unit s-1 island">Sub Badges</h3>
+
+
+      <div class="card unit s-1 m-1-2 island">
+        <img class="portfolio-piece" src="{{site.baseurl}}/images/twitch/jesterality-sub-badges.jpg" alt="jesterality sub badges">
+      </div>
+
+      <div class="card unit s-1 m-1-2 island">
+        <img class="portfolio-piece" src="{{site.baseurl}}/images/twitch/elevensmind-badges.png" alt="Elevens mind sub badges">
+      </div>
+
+      <h3 class="card unit s-1 island">Other Media</h3>
+
+
+      <div class="card unit s-1 m-1-2 island">
+        <img class="portfolio-piece" src="{{site.baseurl}}/images/twitch/pepega-youtube.jpg" alt="Astroneer youtube cover">
+      </div>
+
+      <div class="card unit s-1 m-1-2 island">
+        <img class="portfolio-piece" style="width: 800px;" src="{{site.baseurl}}/images/twitch/gk-phone-gif.gif" alt="brb screen">
+      </div>
+
+      <div class="card unit s-1 m-1-2 island">
+        <img class="portfolio-piece" style="width: 800px;" src="{{site.baseurl}}/images/twitch/gk-server-banner.png" alt="brb screen">
+      </div>
+
+      <div class="card unit s-1 m-1-2 island">
+        <img class="portfolio-piece" src="{{site.baseurl}}/images/twitch/unseenvision-starting-soon.jpg" alt="starting soon screen">
+      </div>
+
+      <h3 class="card unit s-1 island">Branding</h3>
+
 
       <div class="card unit s-1 island">
         <img class="portfolio-piece" src="{{site.baseurl}}/images/twitch/pepega-case-study-mockup.jpg" alt="The Actual Pepega Case Study">
