Adding in more twitch assets

--- a/twitch.html
+++ b/twitch.html
@@ -70,7 +70,7 @@ layout: default
       </div>
 
       <div class="card unit s-1 m-1-2 island">
-        <img class="portfolio-piece" src="{{site.baseurl}}/images/twitch/jesterality-loading.gif" alt="Jesterality loading screen">
+        <img class="portfolio-piece" src="{{site.baseurl}}/images/twitch/jesterality-loading-screen.gif" alt="Jesterality loading screen">
       </div>
 
       <div class="card unit s-1 m-1-2 island">
@@ -89,7 +89,7 @@ layout: default
 
 
       <div class="card unit s-1 m-1-2 island">
-        <img class="portfolio-piece" src="{{site.baseurl}}/images/twitch/jesterality-sub-badges.jpg" alt="jesterality sub badges">
+        <img class="portfolio-piece" src="{{site.baseurl}}/images/twitch/jesterality-sub-badges.png" alt="jesterality sub badges">
       </div>
 
       <div class="card unit s-1 m-1-2 island">
@@ -104,7 +104,7 @@ layout: default
       </div>
 
       <div class="card unit s-1 m-1-2 island">
-        <img class="portfolio-piece" style="width: 800px;" src="{{site.baseurl}}/images/twitch/gk-phone-gif.gif" alt="brb screen">
+        <img class="portfolio-piece" style="width: 800px;" src="{{site.baseurl}}/images/twitch/gk-phone-gif-800.gif" alt="brb screen">
       </div>
 
       <div class="card unit s-1 m-1-2 island">
