--- a/twitch.html
+++ b/twitch.html
@@ -7,7 +7,7 @@ layout: default
   <div class="pieces grid">
 
     <div class="unit s-1 m-1 l-1-2 island">
-      <img class="portfolio-piece" style="width: 800px;" src="{{site.baseurl}}/images/twitch/gk-intro-gif.gif" alt="starting soon">
+      <img class="portfolio-piece" style="width: 800px;" src="{{site.baseurl}}/images/twitch/gk-intro.gif" alt="starting soon">
     </div>
 
     <div class="unit s-1 m-1 l-1-4 island">
