adding in new twitch additions

--- a/twitch.html
+++ b/twitch.html
@@ -48,19 +48,27 @@ layout: default
       </div>
 
       <div class="card unit s-1 m-1-2 island">
-        <img class="portfolio-piece" src="{{site.baseurl}}/images/twitch/gk-emotes.jpg" alt="Ginger kitten emotes">
+        <img class="portfolio-piece" src="{{site.baseurl}}/images/twitch/gk-emotes-july.png" alt="Ginger kitten July 4 emotes">
       </div>
+
+      <!-- <div class="card unit s-1 m-1-2 island">
+        <img class="portfolio-piece" src="{{site.baseurl}}/images/twitch/gk-emotes.jpg" alt="Ginger kitten emotes">
+      </div> -->
 
       <div class="card unit s-1 m-1-2 island">
         <img class="portfolio-piece" src="{{site.baseurl}}/images/twitch/jesterality-5-emotes.png" alt="jesterality emotes">
       </div>
 
       <div class="card unit s-1 m-1-2 island">
-        <img class="portfolio-piece" src="{{site.baseurl}}/images/twitch/jesterality-animated-emotes.gif" alt="jesterality emotes">
+        <img class="portfolio-piece" src="{{site.baseurl}}/images/twitch/jesterality-animated-emotes-2.gif" alt="jesterality emotes">
       </div>
 
       <div class="card unit s-1 m-1-2 island">
         <img class="portfolio-piece" src="{{site.baseurl}}/images/twitch/pepega-animated-emotes.gif" alt="pepega cain emotes">
+      </div>
+
+      <div class="card unit s-1 m-1-2 island">
+        <img class="portfolio-piece" src="{{site.baseurl}}/images/twitch/jesterality-animated-emotes.gif" alt="jesterality emotes">
       </div>
 
       <h3 class="card unit s-1 island">Screens</h3>
@@ -98,13 +106,16 @@ layout: default
 
       <h3 class="card unit s-1 island">Other Media</h3>
 
-
       <div class="card unit s-1 m-1-2 island">
         <img class="portfolio-piece" src="{{site.baseurl}}/images/twitch/pepega-youtube.jpg" alt="Astroneer youtube cover">
       </div>
 
       <div class="card unit s-1 m-1-2 island">
         <img class="portfolio-piece" style="width: 800px;" src="{{site.baseurl}}/images/twitch/gk-phone-gif-800.gif" alt="brb screen">
+      </div>
+
+      <div class="card unit s-1 m-1-2 island">
+        <img class="portfolio-piece" src="{{site.baseurl}}/images/twitch/gk-panels.png" alt="Discord banners">
       </div>
 
       <div class="card unit s-1 m-1-2 island">
