--- a/twitch.html
+++ b/twitch.html
@@ -119,6 +119,10 @@ layout: default
       </div>
 
       <div class="card unit s-1 m-1-2 island">
+        <img class="portfolio-piece" style="width: 800px;" src="{{site.baseurl}}/images/twitch/jesterality-panels.png" alt="Jesterality panels">
+      </div>
+
+      <div class="card unit s-1 m-1-2 island">
         <img class="portfolio-piece" style="width: 800px;" src="{{site.baseurl}}/images/twitch/gk-server-banner.png" alt="brb screen">
       </div>
 
