fixed the images

--- a/twitch.html
+++ b/twitch.html
@@ -28,15 +28,15 @@ layout: default
     <h3 class="card unit s-1 island">Emotes</h3>
 
       <div class="card unit s-1 m-1-2 island">
-        <img class="portfolio-piece" style="width: 800px;" src="{{site.baseurl}}/images/twitch/gk-emotes-vday.png" alt="Ginger v day emotes">
+        <img class="portfolio-piece" src="{{site.baseurl}}/images/twitch/gk-emotes-vday.png" alt="Ginger v day emotes">
       </div>
 
       <div class="card unit s-1 m-1-2 island">
-        <img class="portfolio-piece" style="width: 800px;" src="{{site.baseurl}}/images/twitch/gk-emotes-easter.png" alt="Ginger easter emotes">
+        <img class="portfolio-piece" src="{{site.baseurl}}/images/twitch/gk-emotes-easter.png" alt="Ginger easter emotes">
       </div>
 
       <div class="card unit s-1 m-1-2 island">
-        <img class="portfolio-piece" style="width: 800px;" src="{{site.baseurl}}/images/twitch/shadow-emotes.gif" alt="Shadow emotes">
+        <img class="portfolio-piece" src="{{site.baseurl}}/images/twitch/shadow-emotes.gif" alt="Shadow emotes">
       </div>
 
       <div class="card unit s-1 m-1-2 island">
@@ -44,7 +44,7 @@ layout: default
       </div>
 
       <div class="card unit s-1 m-1-2 island">
-        <img class="portfolio-piece" style="width: 800px;" src="{{site.baseurl}}/images/twitch/gk-emotes-cat.png" alt="Ginger cat emotes">
+        <img class="portfolio-piece" src="{{site.baseurl}}/images/twitch/gk-emotes-cat.png" alt="Ginger cat emotes">
       </div>
 
       <div class="card unit s-1 m-1-2 island">
@@ -111,7 +111,7 @@ layout: default
       </div>
 
       <div class="card unit s-1 m-1-2 island">
-        <img class="portfolio-piece" style="width: 800px;" src="{{site.baseurl}}/images/twitch/gk-phone-gif-800.gif" alt="brb screen">
+        <img class="portfolio-piece" src="{{site.baseurl}}/images/twitch/gk-phone-gif-800.gif" alt="brb screen">
       </div>
 
       <div class="card unit s-1 m-1-2 island">
@@ -119,11 +119,11 @@ layout: default
       </div>
 
       <div class="card unit s-1 m-1-2 island">
-        <img class="portfolio-piece" style="width: 800px;" src="{{site.baseurl}}/images/twitch/jesterality-panels.png" alt="Jesterality panels">
+        <img class="portfolio-piece" src="{{site.baseurl}}/images/twitch/jesterality-panels.png" alt="Jesterality panels">
       </div>
 
       <div class="card unit s-1 m-1-2 island">
-        <img class="portfolio-piece" style="width: 800px;" src="{{site.baseurl}}/images/twitch/gk-server-banner.png" alt="brb screen">
+        <img class="portfolio-piece" src="{{site.baseurl}}/images/twitch/gk-server-banner.png" alt="brb screen">
       </div>
 
       <div class="card unit s-1 m-1-2 island">
