Adding in the new Well Roasted section

--- a/solink-marketing.html
+++ b/solink-marketing.html
@@ -60,7 +60,7 @@ layout: default
       </div>
 
       <div class="card unit s-1 m-1 l-1-2 island">
-        <img class="portfolio-piece" src="{{site.baseurl}}/images/solink/jib-banners.jpg" alt="Two Solink tradeshow banners">
+        <img class="portfolio-piece" src="{{site.baseurl}}/images/solink/3-cannabis-banners.jpg" alt="Three Solink tradeshow banners">
       </div>
 
       <div class="unit multi s-1 m-1 l-1-2 island">
@@ -92,7 +92,7 @@ layout: default
       </div>
 
       <div class="card unit s-1 m-1 l-1-2 island">
-        <img class="portfolio-piece" src="{{site.baseurl}}/images/solink/threebanners.jpg" alt="Solink Tims camper booth">
+        <img class="portfolio-piece" src="{{site.baseurl}}/images/solink/2-banners.png" alt="2 Solink banners">
       </div>
       <div class="card unit s-1 m-1-2 l-1-4 island">
         <img class="portfolio-piece" src="{{site.baseurl}}/images/solink/lift&co.jpg" alt="First in first out onepager">
