--- a/index.html
+++ b/index.html
@@ -51,29 +51,29 @@ layout: default
     </div>
   </a>
 
-  <a href="{{site.baseurl}}drbia" class="card unit xs-1-2 m-1-2 l-1-4">
+  <a href="{{site.baseurl}}well-roasted" class="card unit xs-1-2 m-1-2 l-1-4">
     <div class="relative">
-      <img class="img-flex" src="{{site.baseurl}}/images/squares/work-icon-10.jpg" alt="">
+      <img class="img-flex" src="{{site.baseurl}}/images/squares/work-icon-16.jpg" alt="">
       <div class="content center-contents">
-        <h3 class="">Downtown Rideau BIA</h3>
+        <h3 class="">Well Roasted</h3>
       </div>
     </div>
   </a>
-
-  <!-- <a href="{{site.baseurl}}" class="card unit xs-1-2 m-1-2 l-1-4">
-    <div class="relative">
-      <img class="img-flex" src="{{site.baseurl}}/images/squares/work-icon-14.jpg" alt="">
-      <div class="content center-contents">
-        <h3 class="">COMING SOON</h3>
-      </div>
-    </div>
-  </a> -->
 
   <a href="{{site.baseurl}}twitch" class="card unit xs-1-2 m-1-2 l-1-4">
     <div class="relative">
       <img class="img-flex" src="{{site.baseurl}}/images/squares/work-icon-15.jpg" alt="">
       <div class="content center-contents">
         <h3 class="">Twitch</h3>
+      </div>
+    </div>
+  </a>
+
+  <a href="{{site.baseurl}}drbia" class="card unit xs-1-2 m-1-2 l-1-4">
+    <div class="relative">
+      <img class="img-flex" src="{{site.baseurl}}/images/squares/work-icon-10.jpg" alt="">
+      <div class="content center-contents">
+        <h3 class="">Downtown Rideau BIA</h3>
       </div>
     </div>
   </a>
@@ -105,14 +105,14 @@ layout: default
     </div>
   </a>
 
-  <a href="{{site.baseurl}}blackfox" class="card unit xs-1-2 m-1-2 l-1-4">
+  <!-- <a href="{{site.baseurl}}blackfox" class="card unit xs-1-2 m-1-2 l-1-4">
     <div class="relative">
       <img class="img-flex" src="{{site.baseurl}}/images/squares/work-icon-08.jpg" alt="">
       <div class="content center-contents">
         <h3 class="">Black Fox Coffee</h3>
       </div>
     </div>
-  </a>
+  </a> -->
 
   <!-- <a href="{{site.baseurl}}iscream" class="card unit xs-1-2 m-1-2 l-1-4">
     <div class="relative">
