Cleaning up mockups

--- a/play.html
+++ b/play.html
@@ -86,7 +86,7 @@ layout: default
   </div>
 
   <div class="relative unit xs-1-2 m-1-2 l-1-4">
-    <img class="img-flex" src="{{site.baseurl}}/images/play/uncharted.jpg" alt="">
+    <img class="img-flex" src="{{site.baseurl}}/images/play/fall-photos.jpg" alt="">
   </div>
 
   <div class="relative unit xs-1-2 m-1-2 l-1-4">
