--- a/solink-marketing.html
+++ b/solink-marketing.html
@@ -69,17 +69,41 @@ layout: default
       </div>
 
       <div class="card unit s-1 m-1-2 l-1-4 island">
-        <img class="portfolio-piece " src="{{site.baseurl}}/images/solink/brochure.jpg" alt="Trades brochure">
+        <img  style ="height: 100%;" class="portfolio-piece " src="{{site.baseurl}}/images/solink/brochure.jpg" alt="Trades brochure">
       </div>
       <div class="card unit s-1 m-1-2 l-1-4 island">
-        <img class="portfolio-piece" src="{{site.baseurl}}/images/solink/toast.jpg" alt="Solink plus Toast one pager">
+        <img  style ="height: 100%;" class="portfolio-piece" src="{{site.baseurl}}/images/solink/cannabis.jpg" alt="Cannabis one pager">
       </div>
       <div class="card unit s-1 m-1 l-1-2 island">
-        <img class="portfolio-piece" src="{{site.baseurl}}/images/solink/social-ads.jpg" alt="Two Solink social media ads on iphones">
+        <img style ="height: 100%;" class="portfolio-piece" src="{{site.baseurl}}/images/solink/social-ads.jpg" alt="Two Solink social media ads on iphones">
       </div>
 
       <div class="card unit s-1 m-1-2 l-1-4 island">
         <img class="portfolio-piece" src="{{site.baseurl}}/images/solink/postcard.jpg" alt="Solink Ideal POS postcard">
+      </div>
+      <div class="card unit s-1 m-1-2 l-1-4 island">
+        <img class="portfolio-piece" src="{{site.baseurl}}/images/solink/decal.jpg" alt="Tim Hortons case study">
+      </div>
+      <div class="card unit s-1 m-1-2 l-1-4 island">
+        <img class="portfolio-piece" src="{{site.baseurl}}/images/solink/ideal-solink.jpg" alt="Sales one pager">
+      </div>
+      <div class="card unit s-1 m-1-2 l-1-4 island">
+        <img class="portfolio-piece" src="{{site.baseurl}}/images/solink/tshirt.jpg" alt="Burger box">
+      </div>
+
+      <div class="card unit s-1 m-1 l-1-2 island">
+        <img style ="height: 100%;" class="portfolio-piece" src="{{site.baseurl}}/images/solink/2-banners.png" alt="2 Solink banners">
+      </div>
+      <div class="card unit s-1 m-1-2 l-1-4 island">
+        <img style ="height: 100%;" class="portfolio-piece" src="{{site.baseurl}}/images/solink/cannabis-2.jpg" alt="First in first out onepager">
+      </div>
+      <div class="card unit s-1 m-1-2 l-1-4 island">
+        <img style ="height: 100%;" class="portfolio-piece" src="{{site.baseurl}}/images/solink/restaurant.jpg" alt="Bank onepager">
+      </div>
+
+
+      <div class="card unit s-1 m-1-2 l-1-4 island">
+        <img class="portfolio-piece" src="{{site.baseurl}}/images/solink/sticker.jpg" alt="Solink Ideal POS postcard">
       </div>
       <div class="card unit s-1 m-1-2 l-1-4 island">
         <img class="portfolio-piece" src="{{site.baseurl}}/images/solink/tims.jpg" alt="Tim Hortons case study">
@@ -91,28 +115,20 @@ layout: default
         <img class="portfolio-piece" src="{{site.baseurl}}/images/solink/burger.jpg" alt="Burger box">
       </div>
 
-      <div class="card unit s-1 m-1 l-1-2 island">
-        <img class="portfolio-piece" src="{{site.baseurl}}/images/solink/2-banners.png" alt="2 Solink banners">
-      </div>
-      <div class="card unit s-1 m-1-2 l-1-4 island">
-        <img class="portfolio-piece" src="{{site.baseurl}}/images/solink/lift&co.jpg" alt="First in first out onepager">
-      </div>
-      <div class="card unit s-1 m-1-2 l-1-4 island">
-        <img class="portfolio-piece" src="{{site.baseurl}}/images/solink/bank.jpg" alt="Bank onepager">
-      </div>
 
       <div class="card unit s-1 m-1-2 l-1-4 island">
-        <img class="portfolio-piece " src="{{site.baseurl}}/images/solink/qsr-mag.jpg" alt="Solink customer infographic">
+        <img class="portfolio-piece " src="{{site.baseurl}}/images/solink/restaurant-2.jpg" alt="Solink customer infographic">
       </div>
       <div class="card unit s-1 m-1-2 l-1-4 island">
-        <img class="portfolio-piece" src="{{site.baseurl}}/images/solink/brochuretims.jpg" alt="Tim Hortons brochure">
+        <img class="portfolio-piece" src="{{site.baseurl}}/images/solink/goodwill.jpg" alt="Tim Hortons brochure">
       </div>
       <div class="card unit s-1 m-1-2 l-1-4 island">
-        <img class="portfolio-piece" src="{{site.baseurl}}/images/solink/movies.jpg" alt="SMovies one pager">
+        <img class="portfolio-piece" src="{{site.baseurl}}/images/solink/voami.jpg" alt="SMovies one pager">
       </div>
       <div class="card unit s-1 m-1-2 l-1-4 island">
-        <img class="portfolio-piece" src="{{site.baseurl}}/images/solink/features.jpg" alt="Solink features">
+        <img class="portfolio-piece" src="{{site.baseurl}}/images/solink/restaurant-2.jpg" alt="Solink features">
       </div>
+
 
       <div class="embed embed-16by9">
         <iframe class="embed-item" src="https://player.vimeo.com/video/372783371?loop=1&title=0&byline=0" width="640" height="360" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
