--- a/drbia.html
+++ b/drbia.html
@@ -29,7 +29,7 @@ layout: default
       </div>
 
       <div class="card unit s-1 m-1 l-1-2 island">
-        <img class="portfolio-piece" src="{{site.baseurl}}/images/drbia/job-ads.png" alt="Phone Case">
+        <img class="portfolio-piece" src="{{site.baseurl}}/images/drbia/job-ads.jpg" alt="Phone Case">
       </div>
 
       <div class="card unit s-1 m-1 l-1-2 island">
